--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
               <img src="./images/triangle.png" alt="Shoes" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Triangle</h2>
-              <p class="text-center text-2xl">Area (A)= 0.5 X b X h</p>
+              <h2 class="card-title justify-center text-2xl font-bold">Triangle</h2>
+              <p class="text-center text-base">Area (A)= 0.5 X b X h</p>
               <div class="">
                 <input
                   id="tri-base"
@@ -53,8 +53,8 @@
               <img src="./images/rectangle.png" alt="Shoes" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Rectangle</h2>
-              <p class="text-center text-2xl">Area (A)= w X l</p>
+              <h2 class="card-title justify-center text-2xl font-bold">Rectangle</h2>
+              <p class="text-center text-base">Area (A)= w X l</p>
               <div class="">
                 <input
                   id="rec-base"
@@ -82,10 +82,26 @@
               <img src="./images/parallelogram.png" alt="Shoes" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Parallelogram</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+              <h2 class="card-title justify-center text-2xl font-bold">Parallelogram</h2>
+              <p class="text-center text-base">Area (A)= b X h</p>
+              <div class="">
+                <input
+                  id="rec-base"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="b"
+                />
+                <span class="mr-4 ml-2">cm</span>
+                <input
+                  id="rec-length"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="h"
+                />
+                <span class="mr-4 ml-2">cm</span>
+              </div>
+              <div class="card-actions" onclick="calculateRectangleFunction()">
+                <button class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
@@ -95,10 +111,28 @@
               <img src="./images/rhombus.png" alt="Shoes" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Rhombus</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+              <h2 class="card-title justify-center text-2xl font-bold">Rhombus</h2>
+              <p class="text-center text-base">
+                Area (A) = 0.5 X d<sub>1</sub> X d<sub>2</sub>
+              </p>
+              <div class="">
+                <input
+                  id="rec-base"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="d1"
+                />
+                <span class="mr-4 ml-2">cm</span>
+                <input
+                  id="rec-length"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="d2"
+                />
+                <span class="mr-4 ml-2">cm</span>
+              </div>
+              <div class="card-actions" onclick="calculateRectangleFunction()">
+                <button class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
@@ -108,10 +142,26 @@
               <img src="./images/pentagon.png" alt="Shoes" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Pentagon</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+              <h2 class="card-title justify-center text-2xl font-bold">Pentagon</h2>
+              <p class="text-center text-base">Area (A) = 0.5 X p X b</p>
+              <div class="">
+                <input
+                  id="rec-base"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="p"
+                />
+                <span class="mr-4 ml-2">cm</span>
+                <input
+                  id="rec-length"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="b"
+                />
+                <span class="mr-4 ml-2">cm</span>
+              </div>
+              <div class="card-actions" onclick="calculateRectangleFunction()">
+                <button class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
@@ -121,10 +171,26 @@
               <img src="./images/ellipse.png" alt="Shoes" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Ellipse</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+              <h2 class="card-title justify-center text-2xl font-bold">Ellipse</h2>
+              <p class="text-center text-base">Area (A)= &pi;ab</p>
+              <div class="">
+                <input
+                  id="rec-base"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="a"
+                />
+                <span class="mr-4 ml-2">cm</span>
+                <input
+                  id="rec-length"
+                  type="text"
+                  class="w-24 text-2xl p-2 rounded-sm"
+                  placeholder="b"
+                />
+                <span class="mr-4 ml-2">cm</span>
+              </div>
+              <div class="card-actions" onclick="calculateRectangleFunction()">
+                <button class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
